--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
+    "@types/nodemailer": "^6.4.15",
     "@types/redis": "^4.0.11",
     "agenda": "^5.0.0",
     "express": "^4.19.2",
@@ -27,9 +28,12 @@
     "joi": "^17.13.3",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
