--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/agenda": "^4.1.0",
     "@types/body-parser": "^1.19.5",
     "@types/bull": "^4.10.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
@@ -22,8 +24,10 @@
     "@types/nodemailer": "^6.4.15",
     "@types/redis": "^4.0.11",
     "agenda": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.18.0",
     "graphql": "^16.9.0",
     "joi": "^17.13.3",
     "mongodb": "^6.7.0",
@@ -36,11 +40,18 @@
     "uuidv4": "^6.2.13"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/ejs": "^3.1.5",
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bul": "^0.0.0",
     "bull": "^4.14.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "jsonwebtoken": "^9.0.2",
     "redis": "^4.6.14"
   }
