--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts"
+    "start": "nodemon src/server.ts",
+    "test": "jest --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
@@ -12,28 +12,37 @@
   "description": "",
   "devDependencies": {
     "@types/agenda": "^4.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/bull": "^4.10.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.15",
     "@types/redis": "^4.0.11",
+    "@types/supertest": "^6.0.2",
+    "@types/winston": "^2.4.4",
     "agenda": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
+    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "mongodb": "^6.7.0",
+    "mongodb-memory-server": "^9.4.0",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "uuid": "^10.0.0",
@@ -41,18 +50,18 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
     "@types/ejs": "^3.1.5",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bul": "^0.0.0",
     "bull": "^4.14.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "jsonwebtoken": "^9.0.2",
-    "redis": "^4.6.14"
+    "lodash": "^4.17.21",
+    "redis": "^4.6.14",
+    "winston": "^3.13.0"
   }
 }
