--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
     "arrowParens": "always",
-    "semi": false,
+    "semi": true,
     "trailingComma": "none",
     "tabWidth": 2,
     "endOfLine": "auto",
@@ -8,5 +8,4 @@
     "singleQuote": true,
     "printWidth": 120,
     "jsxSingleQuote": true
-  }
-  
+}
