--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/k6": "^0.52.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
     "@types/nodemailer": "^6.4.15",
@@ -36,6 +37,7 @@
     "graphql": "^16.9.0",
     "jest": "^29.7.0",
     "joi": "^17.13.3",
+    "k6": "^0.0.0",
     "mongodb": "^6.7.0",
     "mongodb-memory-server": "^9.4.0",
     "mongoose": "^8.4.4",
